Fix alignment of gene entry textarea and error message on study and results view
Former-commit-id: 3e1b0348ceb7e0d0656f805f4a8f89cc9a1f29f3

--- a/src/shared/components/GeneSelectionBox/styles.module.scss
+++ b/src/shared/components/GeneSelectionBox/styles.module.scss
@@ -9,6 +9,7 @@
     display: flex;
     align-items: flex-start;
     margin-bottom: 5px;
+    justify-content: flex-end;
 }
 
 .genesSelection {
